<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="address">Delivery address</string>
    <string name="apiKey_GoogleMaps">AIzaSyBQ6u0PG5L2YaRtb3T1x_WH-oag9kW6jwU</string>
    <string name="apikey_appsee">bad48dbe399743768e8befa718992263</string>
    <string name="app_name">Last Mile</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_button">Apply</string>
    <string name="assignedShipments_bottomSheet_recipientPostalAddress">Recipient Postal Address</string>
    <string name="assignedShipments_emptyListMsg">There is no any assigned part!</string>
    <string name="assignedShipments_screenTitle">Confirm Assigned Part</string>
    <string name="auth_failed">Authentication Problem</string>
    <string name="auto_refundable_dialog_body">با انتخاب این وضعیت برای مرسوله، در پایان فرایند توزیع مرسولات ممکن است به صورت خودکار مبلغی به حساب مشتری واریز ‌شود، آیا از انتخاب این وضعیت مطمئن هستید؟</string>
    <string name="auto_refundable_dialog_negative">بازگشت</string>
    <string name="auto_refundable_dialog_positive">بله</string>
    <string name="bad">Weak</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_forget_password">Forget Password...</string>
    <string name="button_login">LOGIN</string>
    <string name="cancel">abstention</string>
    <string name="card_number">Card NUmber</string>
    <string name="change_password">Change Password</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="child_count_error">FABProgressCircle layout must only contain one child.</string>
    <string name="com.crashlytics.android.build_id">ba9b6983-fda8-4497-abc3-23a41a979fbf</string>
    <string name="comment">Comment</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">confirm</string>
    <string name="customer_name">Customer Name</string>
    <string name="default_notification_channel_id">10</string>
    <string name="default_notification_channel_title">High</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="default_web_client_id">291969474424-20occj8j05p6pe6ne3q0e74fevkgsetc.apps.googleusercontent.com</string>
    <string name="deliver_shipment_is_empty">Deliver Shipment Is Empty</string>
    <string name="deliver_shipment_item_is_empty">Deliver Shipment Item Is Empty</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="empty_error">field is required</string>
    <string name="empty_list_error">there is no item in list</string>
    <string name="empty_partial_list">You dont select any Item</string>
    <string name="error_barcode_scan_canceled">barcode scanner cancelled</string>
    <string name="error_textInputLayout_deliveryName_emptyField">Please Enter Delivery Id!</string>
    <string name="error_textInputLayout_password_emptyField">Please Enter Password!</string>
    <string name="exit_program">exit the program.</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://digikaladms-75fbb.firebaseio.com</string>
    <string name="force_update">Update your application</string>
    <string name="force_update_message">Install New Version of Application</string>
    <string name="found_location_failed">current location not found</string>
    <string name="gcm_defaultSenderId">291969474424</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="generic_error">Error Has Occurred Please Try Again Later</string>
    <string name="generic_server_down">Server Is Down</string>
    <string name="generic_server_timeout">Server Connection Timeout</string>
    <string name="good">Good</string>
    <string name="google_api_key">AIzaSyCbNyZ_3oKs1GwGmIjRwWk6lHXn5jUQVwM</string>
    <string name="google_app_id">1:291969474424:android:5881fec7b8f9da97</string>
    <string name="google_crash_reporting_api_key">AIzaSyCbNyZ_3oKs1GwGmIjRwWk6lHXn5jUQVwM</string>
    <string name="google_storage_bucket">digikaladms-75fbb.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint_editText_deliveryId">Delivery Id</string>
    <string name="hint_editText_password">Password</string>
    <string name="information_user">User Information</string>
    <string name="install">Install</string>
    <string name="invoice_id">Invoice Id</string>
    <string name="item_count">itemCount</string>
    <string name="item_not_found">item not found</string>
    <string name="item_return_count">item Return Count</string>
    <string name="label_logout">Logout</string>
    <string name="label_scan">Scan</string>
    <string name="length_error">the minimum field length is 5 characters</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="login_label_versionName">Version</string>
    <string name="main_closedList_emptyListMsg">There is no any closed shipment!</string>
    <string name="main_openList_emptyListMsg">There is no any open shipment!</string>
    <string name="main_row_shipment_orderId_label">Shipment Id</string>
    <string name="main_row_shipments_label_deliveryTime">Delivery Time</string>
    <string name="money_unit">Rial</string>
    <string name="msg_scan_help">place a barcode inside the viewfinder rectangle to scan it</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="new_password">new password</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="not_bad">Middle</string>
    <string name="not_now">Not Now</string>
    <string name="nps_option_any_cost">10</string>
    <string name="nps_option_definitely">9</string>
    <string name="nps_option_hell_no">0</string>
    <string name="nps_option_hmmm">5</string>
    <string name="nps_option_not_really">1</string>
    <string name="nps_option_sure">8</string>
    <string name="nps_option_will_not">2</string>
    <string name="nps_option_will_see">3</string>
    <string name="nps_option_will_try">4</string>
    <string name="nps_option_yes">6</string>
    <string name="nps_option_yup">7</string>
    <string name="order_state">Order State</string>
    <string name="select_language">Select Language</string>
    <string name="setting">Setting</string>
    <string name="status_deliver">Full Deliver</string>
    <string name="status_left">Status Left</string>
    <string name="status_miss_call">Miss call</string>
    <string name="status_partial_deliver">Half Return</string>
    <string name="status_return">Full Return</string>
</resources>