<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layoutDirection="rtl">
        <com.digikala.dms.view.custom.XeiTextView
            android:textSize="16sp"
            android:textColor="@color/shipment_detail_content_color"
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/change_password"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layoutDirection="rtl">
        <com.digikala.dms.view.custom.XeiTextView
            android:textSize="16sp"
            android:textColor="@color/shipment_detail_content_color"
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/select_language"
            android:layout_weight="1"/>
        <com.digikala.dms.view.custom.XeiTextView
            android:textSize="16sp"
            android:textColor="@color/language_select_setting"
            android:gravity="left"
            android:id="@+id/languageTextView"
            android:paddingRight="20dp"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginLeft="40dp"
            android:text="@string/select_language"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
