<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/order_state_layout"
    android:background="@android:color/white"
    android:clipToPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <com.digikala.dms.view.custom.XeiTextView
        android:textSize="18sp"
        android:textColor="@color/shipment_detail_content_color"
        android:gravity="center"
        android:id="@+id/order_state_text_view"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_state"
        app:locale="fa_IR"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/order_state_chooser_view"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/fragment_shipment_details_deliver"
            android:background="@drawable/shipment_details_hover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/fragment_shipment_details_deliver_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_checkmark"/>
            <com.digikala.dms.view.custom.XeiTextView
                android:textSize="14sp"
                android:textColor="@color/shipment_detail_header_color"
                android:gravity="center"
                android:id="@+id/fragment_shipment_details_deliver_text"
                android:padding="@dimen/item_padding"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_size_header"
                android:text="@string/status_deliver"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/fragment_shipment_details_partial_deliver"
            android:background="@drawable/shipment_details_hover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/fragment_shipment_details_partial_deliver_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_to_do"/>
            <com.digikala.dms.view.custom.XeiTextView
                android:textSize="14sp"
                android:textColor="@color/shipment_detail_header_color"
                android:gravity="center"
                android:id="@+id/fragment_shipment_details_partial_deliver_text"
                android:padding="@dimen/item_padding"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_size_header"
                android:text="@string/status_partial_deliver"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/fragment_shipment_details_miss_call"
            android:background="@drawable/shipment_details_hover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/fragment_shipment_details_miss_call_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_absence"/>
            <com.digikala.dms.view.custom.XeiTextView
                android:textSize="14sp"
                android:textColor="@color/shipment_detail_header_color"
                android:gravity="center"
                android:id="@+id/fragment_shipment_details_miss_call_text"
                android:padding="@dimen/item_padding"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_size_header"
                android:text="@string/status_miss_call"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/fragment_shipment_details_returned"
            android:background="@drawable/shipment_details_hover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/fragment_shipment_details_returned_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_returned"/>
            <com.digikala.dms.view.custom.XeiTextView
                android:textSize="14sp"
                android:textColor="@color/shipment_detail_header_color"
                android:gravity="center"
                android:id="@+id/fragment_shipment_details_returned_text"
                android:padding="@dimen/item_padding"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_size_header"
                android:text="@string/status_return"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/fragment_shipment_details_left"
            android:background="@drawable/shipment_details_hover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/fragment_shipment_details_left_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_unsend"/>
            <com.digikala.dms.view.custom.XeiTextView
                android:textSize="14sp"
                android:textColor="@color/shipment_detail_header_color"
                android:gravity="center"
                android:id="@+id/fragment_shipment_details_left_text"
                android:padding="@dimen/item_padding"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_size_header"
                android:text="@string/status_left"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
