<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:background="?attr/colorPrimary"
            android:padding="0dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <RelativeLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/back_button"
                    android:background="@drawable/hover_oval"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_arrow_back_white_24dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"/>
                <com.digikala.dms.view.custom.XeiTextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:gravity="start|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/information_user"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/back_button"
                    app:locale="auto"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
        <android.support.v7.widget.CardView
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Spinner
                    android:id="@+id/cardSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="8dp"/>
                <com.digikala.dms.view.custom.XeiEditText
                    android:textSize="@dimen/text_size_large"
                    android:id="@+id/cardNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/card_number"
                    android:lines="1"
                    android:maxLength="20"
                    android:inputType="number"
                    app:locale="auto"/>
                <com.digikala.dms.view.custom.XeiEditText
                    android:textSize="@dimen/text_size_large"
                    android:id="@+id/commentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/comment"
                    android:lines="4"
                    app:locale="auto"/>
                <com.digikala.dms.view.custom.XeiButton
                    android:textSize="@dimen/login_textSize_loginButton"
                    android:textColor="@color/text_white"
                    android:id="@+id/applyButton"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_height_loginButton"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/apply_button"
                    app:locale="auto"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
