<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/white"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:orientation="vertical"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="50dp">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/settingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layoutDirection="ltr">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/ic_setting"/>
                <com.digikala.dms.view.custom.XeiTextView
                    android:textColor="@color/cardview_dark_background"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/setting"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/scanLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layoutDirection="ltr">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/ic_scan_gray_24dp"/>
                <com.digikala.dms.view.custom.XeiTextView
                    android:textColor="@color/cardview_dark_background"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_scan"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/logoutLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layoutDirection="ltr">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/ic_exit_to_app_black_24dp"/>
                <com.digikala.dms.view.custom.XeiTextView
                    android:textColor="@color/cardview_dark_background"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_logout"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
